@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 the original author or authors.
+ * Copyright 2010 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,13 +12,10 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
-package org.powermock.api.mockito.expectation;
+ */package org.powermock.api.mockito.expectation;
 
-import org.mockito.stubbing.OngoingStubbing;
+public interface PrivatelyExpectedArguments {
+	<T> void withArguments(Object firstArgument, Object... additionalArguments) throws Exception;
 
-public interface WithoutExpectedArguments<T> {
-
-    OngoingStubbing<T> withNoArguments() throws Exception;
-
+	<T> void withNoArguments() throws Exception;
 }
